--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,9 +9,9 @@ springdoc:
 
 spring:
   datasource:
-    url: jdbc:postgresql://postgres:5432/product
+    url: jdbc:postgresql://localhost:5432/product
     username: postgres
-    password: m1latDB
+    password: test123
     schema: public
     driverClassName: org.postgresql.Driver
 
