--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations-jakarta</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
 			<version>2.1.10</version> <!-- Use the latest version -->
 		</dependency>
